build/dev/infra.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  replicas: 2
  selector:
    matchLabels:
      name: service-a
  template:
    metadata:
      labels:
        name: service-a
    spec:
      containers:
        - name: service-a
          image: localhost:5000/service:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 15
            httpGet:
              path: /health
              port: 8080
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  type: ClusterIP
  selector:
    name: service-a
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      name: service-b
  template:
    metadata:
      labels:
        name: service-b
    spec:
      containers:
        - name: service-b
          image: localhost:5000/service:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 15
            httpGet:
              path: /health
              port: 8080
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  type: ClusterIP
  selector:
    name: service-b
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /service_a/(.*)
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
          - path: /service_b/(.*)
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 80
